# CX-Language-Interpreter

./: .gitignore  CX.cabal  CXBase.hs  CXTypeChecking.hs  Main.hs  Makefile  Makefile_nocabal  README.md  README_en.md  README_pl.md  make_zip.sh  testProg.cx
EBNF/: CX.cf
bad/: badForLoop.cx  builtinFunctionArg.cx  functionArgsNumber.cx  operatorArg.cx  returnMain.cx  rvalue.cx  zeroDivision.cx
good/: basicConstructs.cx  builtinFunctions.cx  operators.cx  recursiveFunction.cx  testBuiltinFunctions.cx  testProg.cx  testVariableShadowing.cx  variableShadowing.cx
test/: recursiveFunction.cx  testBuiltinFunctions.cx  testProg.cx  testVariableShadowing.cx
test/bad/: incorrectFunctionArgs.cx
