name:                CX
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             AllRightsReserved
license-file:        LICENSE
author:              Piotr Majcherczyk
maintainer:          pm334695@students.mimuw.edu.pl
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable CX
  main-is:             Main.hs
  -- other-modules:       
  other-extensions:    CPP, MagicHash
  build-depends:       base >=4.8 && <4.9, array >=0.5 && <0.6, containers >=0.5.5, mtl >=2.1.3.1, transformers >=0.4.3.0
  hs-source-dirs:      .
  build-tools:         alex, happy
  default-language:    Haskell2010